# 3d-forest-classic

./: .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  travis.yml
.github/workflows/: cmake.yml
sourceCode/: 3dforest.qrc  ComputeSortiment.cpp  ComputeSortiment.h  HoughTransform.cpp  HoughTransform.h  LICENSE.txt  LeastSquareregression.cpp  LeastSquareregression.h  README.txt  alphaShapes.cpp  alphaShapes.h  cloud.cpp  cloud.h  crown.cpp  crown.h  crownDetection.cpp  crownDetection.h  externalPointsBySection.cpp  externalPointsBySection.h  geomcalculations.cpp  geomcalculations.h  gui.cpp  gui.h  hull.cpp  hull.h  main.cpp  mainwindow.cpp  mainwindow.h  project.cpp  project.h  projects.txt  qsm.cpp  qsm.h  reconstruction.cpp  reconstruction.h  segment.cpp  segment.h  segmentation.cpp  segmentation.h  skeleton.cpp  (+7 more)
sourceCode/images/crownBar/: Thumbs.db
